[tool.poetry]
name = "vlogs"
version = "1.0.5"
description = "CUBETIQ vLogs SDK for Python"
authors = ["Sambo Chea <sombochea@cubetiqs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vlogs"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# [tool.poetry.scripts]
# test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"